--- a/package.json
+++ b/package.json
@@ -10,16 +10,24 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:analyze": "cross-env ANALYZE=true next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^12.0.3",
+    "classnames": "^2.3.1",
+    "cross-env": "^7.0.3",
     "next": "12.0.3",
+    "next-compose-plugins": "^2.2.1",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.43.4"
   },
   "devDependencies": {
     "@types/node": "16.11.6",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "17.0.34",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
