--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chaos-control-book",
+  "name": "@chaos-control-book/frontend",
   "version": "0.0.0",
   "author": {
     "name": "Aleksey Shelementev",
@@ -18,14 +18,19 @@
     "@next/bundle-analyzer": "^12.0.3",
     "classnames": "^2.3.1",
     "cross-env": "^7.0.3",
+    "framer-motion": "^5.2.1",
+    "lodash-es": "^4.17.21",
+    "markdown-to-jsx": "^7.1.3",
     "next": "12.0.3",
     "next-compose-plugins": "^2.2.1",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.43.4"
+    "sass": "^1.43.4",
+    "swr": "^1.0.1"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.5",
     "@types/node": "16.11.6",
     "@types/nprogress": "^0.2.0",
     "@types/react": "17.0.34",
@@ -37,6 +42,7 @@
     "eslint-config-next": "12.0.3",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import-helpers": "^1.1.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.21.5",
