--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build": "next build",
     "build:analyze": "cross-env ANALYZE=true next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "simple-git-hooks"
   },
   "dependencies": {
     "@next/bundle-analyzer": "^12.0.3",
@@ -30,6 +31,8 @@
     "swr": "^1.0.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^14.1.0",
+    "@commitlint/config-conventional": "^14.1.0",
     "@types/lodash-es": "^4.17.5",
     "@types/node": "16.11.6",
     "@types/nprogress": "^0.2.0",
@@ -47,8 +50,18 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "lint-staged": "^12.0.2",
     "prettier": "^2.4.1",
     "simple-git-hooks": "^2.7.0",
     "typescript": "4.4.4"
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "simple-git-hooks": {
+    "pre-commit": "yarn lint-staged",
+    "commit-msg": "yarn commitlint -e"
   }
 }
