--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
   },
   "dependencies": {
     "@next/bundle-analyzer": "^12.0.3",
+    "@react-hook/throttle": "^2.2.0",
     "classnames": "^2.3.1",
     "cross-env": "^7.0.3",
     "framer-motion": "^5.2.1",
-    "lodash-es": "^4.17.21",
     "markdown-to-jsx": "^7.1.3",
     "next": "12.0.3",
     "next-compose-plugins": "^2.2.1",
