--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
           "/^next/",
           "module",
           "/^~widgets/",
+          "/^~features/",
           "/^~shared/",
           ["parent", "sibling", "index"]
         ],
