--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "markdown-to-jsx": "^7.1.3",
     "next": "12.0.3",
     "next-compose-plugins": "^2.2.1",
+    "next-pwa": "^5.4.0",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
