chore: adjusts eslint import config
Signed-off-by: Aleksey Shelementev <rushelex@gmail.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,8 +15,8 @@
       "error",
       {
         "groups": [
-          "/^react/",
-          "/^next/",
+          ["/^react$/", "/^react/.+$/"],
+          ["/^next$/", "/^next/.+$/"],
           "module",
           "/^~widgets/",
           "/^~features/",
