--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "classnames": "^2.3.1",
     "cross-env": "^7.0.3",
     "framer-motion": "^5.2.1",
-    "markdown-to-jsx": "^7.1.3",
     "next": "12.0.3",
     "next-compose-plugins": "^2.2.1",
     "next-pwa": "^5.4.0",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-markdown": "^7.1.0",
     "sass": "^1.43.4",
     "swr": "^1.0.1"
   },
