--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-pwa": "^5.4.0",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
+    "react-content-loader": "^6.0.3",
     "react-dom": "17.0.2",
     "react-markdown": "^7.1.0",
     "sass": "^1.43.4",
