--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,6 +44,12 @@
     "import/no-default-export": ["error"],
     "react/require-default-props": "off",
     "react/jsx-no-undef": "off",
+    "react/function-component-definition": [
+      "error",
+      {
+        "namedComponents": "arrow-function"
+      }
+    ],
     "jsx-a11y/anchor-is-valid": "off",
     "@typescript-eslint/no-unused-vars": [
       "error",
