chore: adds production docker config
Signed-off-by: Aleksey Shelementev <rushelex@gmail.com>

--- a/.dockerignore
+++ b/.dockerignore
@@ -5,7 +5,8 @@
 .dockerignore
 .next/
 node_modules
-Dockerfile
+development.Dockerfile
+production.Dockerfile
 LICENSE
 README.md
 tsconfig.tsbuildinfo
