feat: updates aliases to dirs
Signed-off-by: Aleksey Shelementev <rushelex@gmail.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,8 +30,11 @@
           ["/^react$/", "/^react/.+$/"],
           ["/^next$/", "/^next/.+$/"],
           "module",
+          "/^~processes/",
+          "/^~layouts/",
           "/^~widgets/",
           "/^~features/",
+          "/^~entities/",
           "/^~shared/",
           ["parent", "sibling", "index"]
         ],
