--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -2,14 +2,17 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "~public/*": ["./public/*"],
-      "~app/*": ["./src/app/*"],
+      "~processes": ["./src/processes/index"],
       "~processes/*": ["./src/processes/*"],
-      "~pages/*": ["./src/pages/*"],
+      "~layouts": ["./src/layouts/index"],
+      "~layouts/*": ["./src/layouts/*"],
       "~widgets": ["./src/widgets/index"],
       "~widgets/*": ["./src/widgets/*"],
+      "~features": ["./src/features/index"],
       "~features/*": ["./src/features/*"],
+      "~entities": ["./src/entities/index"],
       "~entities/*": ["./src/entities/*"],
+      "~shared": ["./src/shared/index"],
       "~shared/*": ["./src/shared/*"]
     }
   }
