--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -53,6 +53,7 @@
         "namedComponents": "arrow-function"
       }
     ],
+    "react/jsx-props-no-spreading": "off",
     "jsx-a11y/anchor-is-valid": "off",
     "@typescript-eslint/no-unused-vars": [
       "error",
