chore: changes configs for deploy
Signed-off-by: Aleksey Shelementev <rushelex@gmail.com>

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,9 @@
-.idea/
-.vscode/
-.git/
+.idea
+.vscode
+.git
 .gitignore
 .dockerignore
-.next/
+.next
 node_modules
 development.Dockerfile
 production.Dockerfile
